--- a/res/layout/activity_main_layout_left.xml
+++ b/res/layout/activity_main_layout_left.xml
@@ -8,13 +8,14 @@
     <RelativeLayout
         android:id="@+id/iv_left_head"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:layout_alignParentTop="true" >
+        android:layout_height="118dp"
+        android:layout_alignParentTop="true"
+         android:background="@drawable/sliding_top_bg" >
 
         <jxnu.n433.x3107.Fragment.View.RoundImageView
             android:id="@+id/sliding_userLogo"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="14dp"
@@ -25,148 +26,172 @@
             android:id="@+id/sliding_userIntroduction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp"
-            android:text="\\\hahahahaha\\\"
+            android:layout_alignBottom="@+id/sliding_userLogo"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/sliding_userLogo"
+            android:text="江西师范大学"
             android:textColor="#FFF0F5"
-            android:textSize="20dp" />
+            android:textSize="15dp" />
 
         <TextView
             android:id="@+id/sliding_userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/sliding_userLogo"
-            android:layout_alignRight="@+id/sliding_userIntroduction"
+            android:layout_above="@+id/sliding_userIntroduction"
+            android:layout_alignLeft="@+id/sliding_userIntroduction"
+            android:layout_marginBottom="18dp"
             android:text="BlingBling"
             android:textColor="#FFF0F5"
             android:textSize="20dp" />
 
     </RelativeLayout>
 
+
     <LinearLayout
         android:id="@+id/sliding_menu_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/iv_left_head"
-        
+        android:paddingLeft="20dp"
+        android:paddingTop="30dp"
         android:orientation="vertical">
         
-        <LinearLayout
-	        android:id="@+id/sliding_menu_list_1"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-			android:orientation="horizontal">
-			
-            <ImageView
-                android:layout_width="88dp"
-	            android:layout_height="68dp"
-	            android:src="@drawable/sliding_user"/>
-	
-	        <TextView
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_vertical"
-	            android:text="  个人中心"
-	            android:textColor="#FFF0F5"
-	            android:textSize="20dp" />
-	
-   		 </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/sliding_menu_list_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:padding="10dp">
 
-        <LinearLayout
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/sliding_menu_message" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/imageView1"
+                android:paddingLeft="10dp"
+                android:text="我的消息"
+                android:textColor="#FFF0F5"
+                android:textSize="25dp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/sliding_menu_list_2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-      
-            android:orientation="horizontal" >
-	        
-             <ImageView
-                android:layout_width="88dp"
-	            android:layout_height="68dp"
-	            android:src="@drawable/collect"/>
+            android:layout_height="wrap_content" 
+             android:layout_centerVertical="true"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/sliding_menu_like" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="  收藏物品"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/imageView2"
+                android:text="我的收藏"
                 android:textColor="#FFF0F5"
-                android:textSize="20dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
+                android:textSize="25dp" />
+        </RelativeLayout>
+        
+        <RelativeLayout
             android:id="@+id/sliding_menu_list_3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/sliding_menu_list_2"
-       
-            android:orientation="horizontal" >
-            
+            android:layout_height="wrap_content" 
+             android:layout_centerVertical="true"
+            android:padding="10dp">
+
             <ImageView
-                android:layout_width="88dp"
-	            android:layout_height="68dp"
-	            android:src="@drawable/goods"/>
+                android:id="@+id/imageView3"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/sliding_menu_item" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="  商品管理"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/imageView3"
+                android:text="我的商品"
                 android:textColor="#FFF0F5"
-                android:textSize="20dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
+                android:textSize="25dp" />
+        </RelativeLayout>
+        
+        <RelativeLayout
             android:id="@+id/sliding_menu_list_4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/sliding_menu_list_3"
-      
-            android:orientation="horizontal" >
-            
+            android:layout_height="wrap_content" 
+             android:layout_centerVertical="true"
+            android:padding="10dp">
+
             <ImageView
-                android:layout_width="88dp"
-	            android:layout_height="68dp"
-	            android:src="@drawable/setup"/>
+                android:id="@+id/imageView4"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/sliding_menu_skin" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="  设置 "
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/imageView4"
+                android:text="主题换肤"
                 android:textColor="#FFF0F5"
-                android:textSize="20dp" />
-
-         
-        </LinearLayout>
+                android:textSize="25dp" />
+        </RelativeLayout>
         
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/sliding_menu_list_5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/sliding_menu_list_3"
-     
-            android:orientation="horizontal" >
-            
+            android:layout_centerVertical="true"
+            android:padding="10dp">
+
             <ImageView
-                android:layout_width="88dp"
-	            android:layout_height="68dp"
-	            android:src="@drawable/guanyu"/>
+                android:id="@+id/imageView5"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/sliding_menu_setup" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="  关于"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/imageView5"
+                android:text="设置"
                 android:textColor="#FFF0F5"
-                android:textSize="20dp" />
-
-         
-        </LinearLayout>
+                android:textSize="25dp" />
+        </RelativeLayout>
+        
     </LinearLayout>
 
-    
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentBottom="true"
+	    android:layout_alignParentLeft="true"
+	    android:gravity="center"
+	    android:background="#FFFFFF"
+	    android:orientation="horizontal" >
+
+		<TextView
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:padding="5dp"
+		    android:text="退出"
+		    android:textColor="#000000"
+			android:textColorHighlight="#DC143C"
+		    android:textSize="20dp" />
+
+	</LinearLayout>
 
 </RelativeLayout>
